<resources>
    <string name="app_name">SIS</string>
    <string name="main_title">SIS</string>
    <string name="login_title">SIS</string>
    <string name="login">Login</string>
    <string name="username">User ID</string>
    <string name="password">Password</string>

    <string name="ar_univ_name">الجامعة العربية المفتوحة</string>
    <string name="en_univ_name">Arab Open University</string>

    <string name="registration">Registration</string>
    <string name="grades">Student Grades</string>
    <string name="fees">Student Fees</string>

    <string name="plan">Student Plan</string>
    <string-array name="plan_schools">
        <item value="1">University Requirements/ Elective</item>
        <item value="2">Mandatory Specialization Requirements</item>
        <item value="3">Foundation Program Requirements</item>
        <item value="4">Faculty Requirements/ Electives</item>
        <item value="5">University Requirements/ Mandatory</item>
        <item value="6">Faculty Requirements/ Mandatory</item>
    </string-array>
    <string-array name="plan_types">
        <item value="1">All</item>
        <item value="2">Completed Courses</item>
        <item value="3">Registered Courses</item>
        <item value="4">Not Completed Courses</item>
    </string-array>

    <string name="timetable">Semester Time Table</string>
    <string-array name="centers">
        <item value="1">Riyadh</item>
        <item value="2">Jeddah</item>
        <item value="3">Ahsa</item>
        <item value="4">Hail</item>
        <item value="5">Madinah</item>
        <item value="6">Dammam</item>
    </string-array>

    <string name="support">Student Support</string>
    <string name="logout">Logout</string>


    <string name="profile">Edit Profile</string>
    <string name="ar_name">Full Name (Arabic)</string>
    <string name="en_name">Full Name (English)</string>
    <string name="ar_program">Program Name (Arabic)</string>
    <string name="en_program">Program Name (English)</string>
    <string name="email">Email</string>
    <string name="civilID">Civil ID</string>
    <string name="mobile">Mobile Number</string>
    <string name="adresse">Home Adresse</string>


    <string name="semester_prompt">Choose a semester</string>

    <string-array name="semester_arrays">
        <item value="1">First Semester</item>
        <item value="2">Second Semester</item>
        <item value="3">Summer Semester</item>
    </string-array>
    <string name="title_activity_support">Support</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="forgetPassword">forget Password</string>
    <string name="student_id">Student ID</string>
    <string name="civil_id">Civil ID / Iqama ID</string>
    <string name="reset_password">reset password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="change_password">Change Password</string>
    <string name="Time_table">Time table</string>
    <string name="remember_me">Remember me</string>
    <string name="student_complaint">Student complaint</string>
    <string name="student_appeal">Student appeal</string>
    <string name="show_complaints">Show My complaints</string>
    <string name="new_complaint">New Complaint</string>
    <string name="complaint_date">Complaint Date</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="student_comments">Student Comments</string>
    <string name="student_complaints">Complaints</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="complaint_status_name">Complaint Status Name</string>
    <string name="comments">Comments</string>
    <string name="choose_complaint_status">Choose complaint status</string>
    <string name="submit">Submit</string>
    <string name="ComplaintCheckbox">I declare that to the best of my knowledge that all the information I have supplied or attached with this form are true, accurate and complete. I give my consent for this information to be circulated to relevant members of the AOU staff on a need-to-know basis for the purpose of investigating my complaint</string>
    <string name="choose_file">Choose file</string>
    <string name="file_path">file Path</string>
    <string name="arab_open_university">Arab Open University</string>
    <string name="update">Update</string>
    <string name="print">print</string>
    <string name="total_hours_details">Total Hours Details</string>
    <string name="tables">Tables</string>
</resources>
