<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".changePassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/Black"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/Black"
                android:importantForAutofill="no"
                />
            <EditText
                android:id="@+id/con_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/Black"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/message_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="text"
                android:textStyle="bold"
                android:padding="15sp"
                android:textColor="@color/Black"
                tools:ignore="TextViewEdits" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:onClick="submit"
                android:text="@string/change_password"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>